--- a/src/components/Counter.module.css
+++ b/src/components/Counter.module.css
@@ -9,7 +9,7 @@
 }
 
 .heading {
-  color: #333;
+  color: #999;
   text-align: center;
 }
 
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-.button.Wrapper {
+.buttonWrapper {
   margin-top: 20px;
   display: flex;
   justify-content: space-evenly;
@@ -30,3 +30,8 @@
   border-radius: 5px;
   color: white;
 }
+
+.resetButton {
+  background: green;
+}
+
